--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=yes"
     />
-    <title>E2E Admin</title>
+    <title>Diamond Sweeper</title>
   </head>
   <body>
     <noscript>
