--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=yes"
     />
     <title>Diamond Sweeper</title>
-  <link rel="shortcut icon" href="/diamond-sweeper/favicon.ico"></head>
+  <link rel="shortcut icon" href="/diamond-sweeper/favicon.ico"><link href="/diamond-sweeper/style.css" rel="stylesheet"></head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-  <script type="text/javascript" src="/diamond-sweeper/vendors~main.fa046d4b.js"></script><script type="text/javascript" src="/diamond-sweeper/main.fa046d4b.js"></script></body>
+  <script type="text/javascript" src="/diamond-sweeper/vendors~main.145da058.js"></script><script type="text/javascript" src="/diamond-sweeper/main.145da058.js"></script></body>
 </html>
